@@ -1,3 +1,9 @@
+2001-08-07  Erik Arneson  <erik@aarg.net>
+
+	* Makefile (INFO_FILES): Changed.
+	($(BIN)): New target to accurately reflect dependancies.
+	(.texi.info): Ditto!
+
 2001-08-07  Steve Youngs  <youngs@xemacs.org>
 
 	* eicq-convert.el (eicq-import-from-licq): Autoload it.
